[package]
name = "web-vlog"
version = "0.1.0"
authors = ["redweasel"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/redweasel/v-log"
documentation = "https://docs.rs/v-log"
description = """
A lightweight web based v-log implementation
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "geometry"]
rust-version = "1.68.0"
edition = "2021"

[dependencies]
base64 = "0.22"
sha1 = { version = "0.10", default-features = false }
v-log = "0.2"
log = "0.4"

[dev-dependencies]
open = "5"
